# lp-esp32-sensor-module

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/command/: CMakeLists.txt  command.c  command.h
components/device/: CMakeLists.txt
components/event_handler/: CMakeLists.txt  event_handler.c  event_handler.h
components/protocol/: CMakeLists.txt  prot_bluetooth.c  prot_bluetooth.h  prot_config.c  prot_config.h  prot_wifi.c  prot_wifi.h  prot_zigbee.c  prot_zigbee.h  transfer_protocol.c  transfer_protocol.h  user_reg_init_protocols.c
components/sensor/: CMakeLists.txt  sensor.c  sensor.h
components/storage/: CMakeLists.txt  storage.c  storage.h
components/util/: CMakeLists.txt  config.c  config.h  constants.h  util.c  util.h
main/: CMakeLists.txt  component.mk  router_main.c  routines.c  routines.h  rtc_wake_stub.c  rtc_wake_stub.h
main/ulp/: ulp_main.S
